--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,8 @@
 Websites from the [InterPlanetary Human Network][IPHN]
 
 * [vland](vland.gq): <https://vland.gq/>
+* [notePad](notePad)
+
 [IPHN]: https://qwant.com/?q=InterPlanetary+Human+Network+%26g
 </div>
 <!--
