fixed title closing tag

--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>IPH Sites<title>
+<title>IPH Sites</title>
 <div class=md>
 #IPH Sites
 
@@ -8,6 +8,7 @@ Websites from the [InterPlanetary Human Network][IPHN]
 
 * [vland](vland.gq): <https://vland.gq/>
 * [notePad](notePad)
+* [gitpage](https://wzites.github.io/iphsites/)
 
 [IPHN]: https://qwant.com/?q=InterPlanetary+Human+Network+%26g
 </div>
